<resources>
    <string name="app_name">Nover</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="rainbow">彩虹</string>
    <string name="bbs">论坛</string>
    <string name="setting">设置</string>
    <string name="fragment">页面</string>
    <string name="video">视频</string>
    <string name="store">商店</string>
</resources>
