<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_group_fragment"
            android:title="@string/fragment">
            <menu>
                <item
                    android:id="@+id/navigation_item_rainbow"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/rainbow" />
                <item
                    android:id="@+id/navigation_item_bbs"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/bbs" />
                <item
                    android:id="@+id/navigation_item_store"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/store" />
                <item
                    android:id="@+id/navigation_item_video"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/video" />

            </menu>
        </item>
        <item
            android:id="@+id/navigation_group_setting"
            android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/navigation_item_settting"
                    android:checked="true"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/setting" />
            </menu>
        </item>
    </group>
</menu>